# AccelerateSearch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  help.md  welcome.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmark/: Cargo.toml  evaluate.rs
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  openapi.rs  state.rs  system.rs  tests.rs
crates/api/src/v1/: collections.rs  documents.rs  embedders.rs  hooks.rs  indexes.rs  keys.rs  mod.rs  network.rs  rules.rs  search.rs  settings.rs  snapshots.rs  synonyms.rs  tasks.rs  tenant_tokens.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs
crates/collections/: Cargo.toml
crates/collections/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/documents/: Cargo.toml
crates/documents/src/: lib.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/facets/: Cargo.toml
crates/facets/src/: lib.rs
crates/filters/: Cargo.toml
crates/filters/src/: ast.rs  evaluator.rs  lib.rs  parser.rs
crates/highlighting/: Cargo.toml
crates/highlighting/src/: lib.rs
crates/hybrid/: Cargo.toml
crates/hybrid/src/: lib.rs
crates/indexing/: Cargo.toml
crates/indexing/src/: analyzer.rs  index_store.rs  inverted_index.rs  lib.rs  pipeline.rs  term_dict.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/replication/: Cargo.toml
crates/replication/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: bm25.rs  dto.rs  engine.rs  lib.rs  query.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: banner.rs  lib.rs
crates/sharding/: Cargo.toml
crates/sharding/src/: lib.rs
crates/snapshots/: Cargo.toml
crates/snapshots/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/synonyms/: Cargo.toml
crates/synonyms/src/: lib.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/typo/: Cargo.toml
crates/typo/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: color.rs  lib.rs
crates/validation/: Cargo.toml
crates/validation/src/: lib.rs
crates/vector/: Cargo.toml
crates/vector/src/: lib.rs  quantization.rs  sparse.rs
docs/: SUMMARY.md  api.md  architecture.md  book.toml  configuration.md  deployment.md  development.md  index.md  rust-api.md
src/: main.rs
