[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "REST API and OpenAPI specification for AccelerateSearch"
publish = false

[dependencies]
actix-web.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
errors.workspace = true
models.workspace = true
storage.workspace = true
utils.workspace = true
config-crate.workspace = true
auth.workspace = true
security.workspace = true
accelerate-metrics.workspace = true
collections.workspace = true
documents.workspace = true
indexing.workspace = true
search.workspace = true
filters.workspace = true
facets.workspace = true
highlighting.workspace = true
vector.workspace = true
hybrid.workspace = true
synonyms.workspace = true
tasks.workspace = true
snapshots.workspace = true
telemetry.workspace = true
validation.workspace = true
uuid.workspace = true

[lints]
workspace = true
