[package]
name = "cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "In-memory LRU + TTL cache for AccelerateSearch"
publish = false

[dependencies]
parking_lot.workspace = true
dashmap.workspace = true
once_cell.workspace = true
lru = "0.18"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
errors.workspace = true
models.workspace = true
utils.workspace = true
config-crate.workspace = true

[lints]
workspace = true
