[package]
name = "errors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified error types for AccelerateSearch"
publish = false

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
actix-web.workspace = true
http.workspace = true
toml.workspace = true
redb.workspace = true
validator.workspace = true
utoipa.workspace = true

[lints]
workspace = true
