[package]
name = "highlighting"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hit highlighting and cropping for AccelerateSearch"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
errors.workspace = true
models.workspace = true
unicode-segmentation.workspace = true
tracing.workspace = true
indexing.workspace = true

[lints]
workspace = true
