[package]
name = "hybrid"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hybrid BM25 + vector ranking (RRF fusion) for AccelerateSearch"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
errors.workspace = true
models.workspace = true
search.workspace = true
vector.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
