[package]
name = "indexing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Indexing pipeline, tokenization, and inverted index for AccelerateSearch"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
once_cell.workspace = true
rust-stemmers.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
regex.workspace = true
aho-corasick.workspace = true
fst.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
errors.workspace = true
models.workspace = true
storage.workspace = true
utils.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
