[package]
name = "metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Prometheus metrics for AccelerateSearch"
publish = false

[dependencies]
prometheus.workspace = true
actix-web.workspace = true
actix-service.workspace = true
futures-util.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
errors.workspace = true
config-crate.workspace = true
tracing.workspace = true

[lints]
workspace = true
