[package]
name = "scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Background job scheduler for AccelerateSearch"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
cron.workspace = true
tracing.workspace = true
thiserror.workspace = true
errors.workspace = true
models.workspace = true
utils.workspace = true
config-crate.workspace = true
telemetry.workspace = true

[lints]
workspace = true
