[package]
name = "sharding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sharding (future) for AccelerateSearch"
publish = false

[dependencies]
serde.workspace = true
errors.workspace = true
models.workspace = true
async-trait.workspace = true
tracing.workspace = true

[lints]
workspace = true
