[package]
name = "snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Snapshot creation, listing, and restoration for AccelerateSearch"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
tar.workspace = true
zstd.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
errors.workspace = true
models.workspace = true
storage.workspace = true
utils.workspace = true
config-crate.workspace = true
utoipa.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
