[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Structured logging and tracing for AccelerateSearch"
publish = false

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
config-crate.workspace = true
errors.workspace = true
utils.workspace = true

[lints]
workspace = true
