[package]
name = "utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared utilities for AccelerateSearch"
publish = false

[dependencies]
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
rand_core.workspace = true
sha2.workspace = true
blake3.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

[lints]
workspace = true
